--- a/src/app/component/staff/staff.component.html
+++ b/src/app/component/staff/staff.component.html
@@ -1,10 +1,10 @@
-<mat-form-field class="example-full-width" appearance="fill">
+<mat-form-field class="input" appearance="fill">
   <mat-label>Staff name</mat-label>
   <input matInput placeholder="Snape" (change)="inputOnChange($event)">
 </mat-form-field>
 
 <div *ngIf="loading; else elseBlock">
-  <mat-spinner diameter="50"></mat-spinner>
+  <mat-spinner class="center" diameter="50"></mat-spinner>
 </div>
 
 
