--- a/src/app/component/wizard-card/wizard-card.component.css
+++ b/src/app/component/wizard-card/wizard-card.component.css
@@ -1,6 +1,7 @@
 .wizard-card {
   display: flex;
-  max-width: 250px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .wizard-card mat-card-title-group {
