--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  background-color: whitesmoke;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.input {
+  width: 100%;
+  min-width: 400px;
+  max-width: 400px;
+}
+
