--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 
 <div class="app">
+  <h1 class="mat-display-3">Hogwarts Challenge</h1>
   <mat-card class="menu">
-    <button mat-button routerLink="houses" routerLinkActive="active">Houses</button>  
-    <button mat-button routerLink="students" routerLinkActive="active">Students</button>  
-    <button mat-button routerLink="staff" routerLinkActive="active">Staff</button> 
-    <button mat-button routerLink="request" routerLinkActive="active">Request</button> 
+    <button mat-button routerLink="houses" routerLinkActive="active">Casas</button>  
+    <button mat-button routerLink="students" routerLinkActive="active">Estudiantes</button>  
+    <button mat-button routerLink="staff" routerLinkActive="active">Profesorado</button> 
+    <button mat-button routerLink="request" routerLinkActive="active">Aplicaciones</button> 
   </mat-card>
 
   <router-outlet></router-outlet>
